# tektonik

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: main.cpp
source/engine/header/: common-defines.hpp  imgui-wrapper.hpp  sdl-wrapper.hpp  std.hpp  vulkan-wrapper.hpp
source/engine/implementation/: app.cpp  config-renderer.cpp  renderer.cpp  runtime.cpp  sdl-wrapper.cpp  test.cpp  util.cpp
source/engine/module/: app.cppm  assert.cppm  common.cppm  components.cppm  concepts.cppm  config-renderer.cppm  config.cppm  consteval-map.cppm  ecs.cppm  interface.cppm  logger.cppm  renderer.cppm  runtime.cppm  sdl-runtime.cppm  singleton.cppm  sparse-set.cppm  string-enum.cppm  test.cppm  util.cppm  vulkan-util.cppm  vulkan-version.cppm
source/example-app/: example-app.cppm  main.cpp
source/header/: sdl-wrapper.hpp  std.hpp
source/implementation/: app.cpp  test.cpp
source/module/: app.cppm  ecs.cppm  runtime.cppm  sparse-set.cppm  test.cppm
